# atlas

./: .gitignore  Atlas.sln  Atlas.vcxproj  Atlas.vcxproj.filters  CMakeLists.txt
scripts/: atlas.py
src/: BaseApp.cpp  BaseApp.h  app.cpp  main.cpp  orbits.h  planetaryMission.cpp  planetaryMission.h
src/core/: JobSystem.cpp  JobSystem.h  coroutines.h  types.h
src/gfx/: CommandList.h  CommandQueue.cpp  CommandQueue.h  ComputePipeline.cpp  ComputePipeline.h  DX12Context.cpp  DX12Context.h  GPUAllocator.cpp  GPUAllocator.h  GPUResource.h  Window.cpp  Window.h  dxHelpers.h  rasterPipeline.cpp  rasterPipeline.h  renderer.cpp  renderer.h  swapChain.cpp  swapChain.h
src/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/math/: matrix.h  vector.h
src/shaders/: staticDirect.h  staticDirect.pshader  staticDirect.vshader
